fix z-index issue on tooltips and control bar

--- a/src/app/framework/viz/dashboard/dashboard.module.css
+++ b/src/app/framework/viz/dashboard/dashboard.module.css
@@ -121,7 +121,7 @@
   right: 17px;
   cursor: pointer;
   opacity: 1;
-  z-index: 100;
+  z-index: 1;
   display: flex;
 }
 
